crates/analyzer/tests/snapshots/errors__call_to_mem_on_primitive.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: `to_mem()` called on primitive type
  ┌─ compile_errors/call_to_mem_on_primitive.fe:5:16
  │
5 │         return self.bar.to_mem()
  │                ^^^^^^^^ ------ hint: remove `.to_mem()`
  │                │         
  │                this value does not need to be explicitly copied to memory


